Removed Customers, the app now works only with a repository, added some find methods to Nexus, added a working pure update method, CustomerController Add method is now Submit and calls UpdateOrAdd.

--- a/CustoDN/CustoDN.Web/Views/Customer/Index.cshtml
+++ b/CustoDN/CustoDN.Web/Views/Customer/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using CustoDN.Domain
-@model CustoDN.Domain.Nexus
+@model IEnumerable<Customer>
 
 @{
 }
@@ -16,9 +16,9 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var customer in Model.Customers)
+        @foreach (var customer in Model)
         {
-            <tr>
+            <tr id=@customer.Id>
                 <td>@customer.FirstName</td>
                 <td>@customer.LastName</td>
                 <td>@customer.CompanyName</td>
@@ -30,3 +30,10 @@
     </tbody>
 </table>
 @Html.Partial("_Create",new Customer())
+
+@section scripts
+{
+    <script type="text/javascript">
+        $()
+    </script>
+}
