--- a/CustoDN/CustoDN.Web/Views/Shared/_Layout.cshtml
+++ b/CustoDN/CustoDN.Web/Views/Shared/_Layout.cshtml
@@ -2,11 +2,9 @@
 <html class="no-js" lang="en">
 <head>
     <meta charset="utf-8" />
-
     @*Set the viewport width to device width for mobile *@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>@ViewBag.Title - Welcome to Foundation</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     @Styles.Render("~/Content/css")
@@ -15,8 +13,33 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    @RenderBody()
+    <div class="off-canvas-wrap">
+        <div class="inner-wrap">
+            <!--contains to grid start - Remove to expand nav elements to edge of page-->
+            <div class="contain-to-grid">
+                <!--use Foundation top-bar element for all but small screens-->
+                <nav class="top-bar hide-for-small" data-topbar>
+                    <ul class="title-area">
+                        <li class="name">
+                            <h1><a href="/Home/">CustoDN</a></h1>
+                        </li>
+                    </ul>
 
+                    <section class="top-bar-section">
+                        <ul class="right">
+                            @Html.Partial("_LoginPartial")
+                        </ul>
+
+                    </section>
+                </nav>
+
+                <!-- Contain to grid end-->
+            </div>
+            <a class="exit-off-canvas" href="#"></a>
+            <!--PUT ALL UP IN _FOUNDATION-->
+            @RenderBody()
+        </div><!--off-canvas inner-->
+    </div><!--off-canvas wrap-->
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/foundation")
     <script>
