--- a/CustoDN/CustoDN.Web/Views/Customer/_Create.cshtml
+++ b/CustoDN/CustoDN.Web/Views/Customer/_Create.cshtml
@@ -1,23 +1,46 @@
 ﻿@model CustoDN.Domain.Customer
 
 
-@using (Html.BeginForm("Submit", "Customer"))
-{
+<form action="/Customer/Submit" method="post" class="ng-pristine ng-valid" id="create">
     <tr>
-        @Html.HiddenFor(c => c.Id)
-        <td>@Html.TextBoxFor(c => c.FirstName)</td>
-        <td>@Html.TextBoxFor(c => c.LastName)</td>
-        <td>@Html.TextBoxFor(c => c.CompanyName)</td>
-        <td>@Html.TextBoxFor(c => c.Email)</td>
-        <td>@Html.TextBoxFor(c => c.Phone)</td>
-        <td>@Html.TextBoxFor(c => c.BillingAddress)</td>
+        <input required name="Id" type="hidden" value="@Model.Id" />
+        <td><input type="text" required name="FirstName" value="@Model.FirstName" /></td>
+        <td><input type="text" required name="LastName" value="@Model.LastName" /></td>
+        <td><input type="text" required name="CompanyName" value="@Model.CompanyName" /></td>
+        <td><input id="email" type="email" required name="Email" value="@Model.Email" /></td>
+        <td><input id="tel" type="tel" pattern="([0-9]-)?\([0-9]{3}\)[0-9]{3}-[0-9]{4}" 
+                   required title="Must include 10 numbers, country code and punctuation are optional."
+                   name="Phone" value="@Model.Phone" onchange="maskPhone(id)" /></td>
+        <td><input type="text" name="BillingAddress" value="@Model.BillingAddress" /></td>
         <td><input type="Submit" name="Save" class="tiny button" /></td>
     </tr>
-}
+    <script src="~/Scripts/jquery-2.1.1.js"></script>
+    <script type="text/javascript">
+        function maskPhone(id) {
+            $('#' + id).val(function (index, value) {
+                var intCode = value.match(/^(\+?[0-9](-|\())/) || [""];
+                console.log(intCode);
+                var result = value.replace(intCode[0], "").replace(/[^0-9]+/g, "");
+                if (result.length < 3) {
+                    result = result.replace(/([0-9]{1,3})/, "($1");
+                } else if (result.length < 6) {
+                    result = result.replace(/([0-9]{1,3})([0-9]{0,3})/, "($1)$2");
+                } else {
+                    result = result.replace(/([0-9]{1,3})([0-9]{0,3})([0-9]{0,4})/, "($1)$2-$3");
+                }
+                return intCode[0].replace('+', '').replace('(', '-') + result.substring(0, 13);
+            });
+        }
+    </script>
+</form>
 
 @section scripts
 {
+    <script type="text/javascript">
+
+    </script>
     <script src="~/Scripts/angular.js"></script>
     <script type="text/javascript">
+
     </script>
 }
